force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date and time when all identified records were successfully deleted. Used to calculate response time and verify compliance with GDPR one-month deadline.</description>
    <inlineHelpText>When all records were erased</inlineHelpText>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>