force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GDPR Erasure Requests</relationshipLabel>
    <relationshipName>GDPR_Erasure_Requests</relationshipName>
    <description>Contact record of the data subject requesting erasure. This lookup may be nullified after erasure is completed to comply with the right to be forgotten.</description>
    <inlineHelpText>Data subject requesting erasure (cleared after completion)</inlineHelpText>
</CustomField>