force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Email address of the data subject requesting erasure. Preserved in encrypted form for audit compliance after the Contact record is deleted. Required for verification.</description>
    <inlineHelpText>Data subject email (preserved for audit)</inlineHelpText>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>