force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Original Salesforce Contact ID preserved for audit trail after the Contact record is deleted. Enables tracking which records were affected by the erasure.</description>
    <inlineHelpText>Original Contact record ID (18 characters)</inlineHelpText>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>