force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Technical error details captured when the erasure batch job fails. Includes exception message and stack trace for troubleshooting. Populated only when Status is Failed.</description>
    <inlineHelpText>Technical error details (if failed)</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>