force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Legal_Basis__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis__c</fullName>
    <label>Legal Basis</label>
    <type>Picklist</type>
    <description>Legal basis for the erasure request under GDPR Article 17. Options: Data no longer necessary, Consent withdrawn, Object to processing, Unlawful processing, Legal obligation to erase.</description>
    <inlineHelpText>GDPR Article 17 ground for erasure</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data no longer necessary</fullName>
            </value>
            <value>
                <fullName>Consent withdrawn</fullName>
            </value>
            <value>
                <fullName>Object to processing</fullName>
            </value>
            <value>
                <fullName>Unlawful processing</fullName>
            </value>
            <value>
                <fullName>Legal obligation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>