force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <label>Processed Date</label>
    <type>DateTime</type>
    <description>Date and time when the batch job began processing the erasure request. Distinct from Completion Date, which marks when all records have been deleted.</description>
    <inlineHelpText>When erasure processing started</inlineHelpText>
</CustomField>