force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Records_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Records_Deleted__c</fullName>
    <description>Total count of database records deleted as part of this erasure request. Includes Contact, related activities, cases, and any custom object records associated with the data subject.</description>
    <inlineHelpText>Number of records erased across all objects</inlineHelpText>
    <label>Records Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>