force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Explanation for why the erasure request could not be fulfilled. Common reasons: legal hold, ongoing dispute, contractual obligations, or statutory retention requirements.</description>
    <inlineHelpText>Legal or business reason for denial</inlineHelpText>
</CustomField>