force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date and time when the erasure request was formally received. This starts the GDPR one-month response deadline clock. Required for compliance tracking.</description>
    <inlineHelpText>When request was received (starts deadline)</inlineHelpText>
    <label>Request Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>