force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <description>Free-text explanation provided by the data subject for their erasure request. Used for audit trail and to determine appropriate legal basis.</description>
    <inlineHelpText>Data subject's explanation for the request</inlineHelpText>
    <label>Request Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>