force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce User who created the erasure request record. This is typically the DPO, privacy officer, or customer service representative who received the request.</description>
    <inlineHelpText>User who recorded this request</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GDPR_Erasure_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>