force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
    <description>Date and time when the data subject submitted their erasure request. GDPR requires response within one month, extendable by two months for complex requests.</description>
    <inlineHelpText>When erasure request was submitted</inlineHelpText>
</CustomField>